# Supply-Chain-Reviews

./: README.md  main.py  pyproject.toml  scrapp.ipynb  scrapping.js
data/: nookmart.com_reviews.csv  trustpilot_reviews.csv
